<resources>
    <string name="app_name">Taller_3</string>
    <string name="email">Email</string>
    <string name="contraseña">Contraseña</string>
    <string name="entrar">Entrar</string>
    <string name="registrar">Registrarse</string>
    <string name="seleccionar">cargar foto</string>
    <string name="camara">Tomar foto</string>
    <string name="name">Nombre</string>
    <string name="apellido">Apellido</string>
    <string name="identificacion">Identificación</string>
    <string name="latitud">Latitud</string>
    <string name="longitud">Longitud</string>
    <string name="salir">Salir</string>
    <string name="online">Estar disponible/no disponible</string>
    <string name="todos">Ver usuarios disponibles</string>
    <string name="posActual">Ver</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="verAll">ver usuarios disponibles</string>
</resources>