<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp"
    tools:context=".Register">


    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="SpeakableTextPresentCheck">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imagen"
                android:layout_width="168dp"
                android:layout_height="168dp"
                android:layout_gravity="center"
                android:layout_marginBottom="24dp"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/mapa" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginBottom="24dp">

                <EditText
                    android:id="@+id/nombre"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/name"
                    android:inputType="textPersonName"
                    android:minHeight="48dp" />

                <EditText
                    android:id="@+id/apellido"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/apellido"
                    android:inputType="textPersonName"
                    android:minHeight="48dp" />

                <EditText
                    android:id="@+id/emailRegistrar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:minHeight="48dp" />

                <EditText
                    android:id="@+id/passwordRegistrar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/contraseña"
                    android:inputType="textPassword"
                    android:minHeight="48dp" />

                <EditText
                    android:id="@+id/identificacion"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/identificacion"
                    android:inputType="number"
                    android:minHeight="48dp" />

                <EditText
                    android:id="@+id/latitud"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/latitud"
                    android:inputType="number"
                    android:minHeight="48dp" />

                <EditText
                    android:id="@+id/longitud"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/longitud"
                    android:inputType="number"
                    android:minHeight="48dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_marginBottom="24dp">

                <Button
                    android:id="@+id/cargarFoto"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="galleryPressed"
                    android:text="@string/seleccionar" />

                <Button
                    android:id="@+id/tomarFoto"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="24dp"
                    android:layout_weight="1"
                    android:onClick="cameraPressed"
                    android:text="@string/camara" />
            </LinearLayout>

            <Button
                android:id="@+id/registrar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="24dp"
                android:onClick="registro"
                android:text="@string/registrar" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>